--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,6 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Train Scheduler</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -13,19 +11,35 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script type="text/javascript" src="assets/javascript/moment.js"></script>
     <script type="text/javascript" src="assets/javascript/page.js"></script>
-     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
     <div class="container">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <form class="form-inline">
+                <div class="form-group">
+                    <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                    <input type="email" class="form-control" id="InputEmail" placeholder="Email">
+                </div>
+                <div class="form-group">
+                    <label class="sr-only" for="exampleInputPassword3">Password</label>
+                    <input type="password" class="form-control" id="InputPassword" placeholder="Password">
+                </div>
+                <button type="submit" class="btn btn-default" id="btnLogin">Sign in</button>
+                 <button type="submit" class="btn btn-info" id="btnSignUp">Sign up</button>
+                <button type="submit" class="btn btn-primary hide" id="btnLogout">Sign out</button>
+            </form>
+        </div>
+        <div class="col-md-2"></div>
         <div class="jumbotron">
             <div class="container">
-                <h1>Anytime is train time. . .</h1>
+                <h1>Anytime is train time</h1>
             </div>
         </div>
-        <div class="panel panel-default" id="currentSchedule">
+        <div class="panel panel-default">
             <!-- Default panel contents -->
-            <div class="panel-heading" id="ctsPanel">
+            <div class="panel-heading">
                 <h3 class="panel-title">Current Train Schedule</h3>
             </div>
             <!-- Table -->
@@ -46,8 +60,8 @@
                 </tr>
             </table>
         </div>
-        <div class="panel panel-default" id="addTrain">
-            <div class="panel-heading" id="atPanel">
+        <div class="panel panel-default">
+            <div class="panel-heading">
                 <h3 class="panel-title">Add Train</h3>
             </div>
             <div class="panel-body">
